Refactor map and list generation
Signed-off-by: Jarno Elovirta <jarno@elovirta.com>